--- a/packages/design/lib/components/uix/tree/style.scss
+++ b/packages/design/lib/components/uix/tree/style.scss
@@ -1,4 +1,9 @@
-.clover-tree {
+.rc-tree-focused:not(.rc-tree-active-focused) {
+    @apply border-none;
+}
+
+.rc-tree {
+    --action-hover: rgba(38, 50, 56, 0.05);
     .rc-tree-treenode {
         @apply w-full px-1 py-1.5 rounded-sm relative;
         @apply hover:bg-[var(--action-hover)] hover:text-primary;
@@ -33,7 +38,6 @@
         @apply w-full;
     }
     .rc-tree-treenode-selected {
-        @apply before:absolute before:w-[3px] before:top-1 before:bottom-1 before:left-1 before:bg-primary before:rounded-md;
         @apply text-primary bg-[rgba(31,30,36,0.08)] font-bold;
     }
 }
