--- a/packages/design/lib/style/globals.css
+++ b/packages/design/lib/style/globals.css
@@ -54,8 +54,8 @@
         --popover: 0 0% 3.9%;
         --popover-foreground: 0 0% 98%;
 
-        --primary: 53, 104, 82;
-        --primary-foreground: 0 0% 9%;
+        --primary: 68, 133, 105;
+        --primary-foreground: 255, 255, 255, 1;
 
         --success: 232, 255, 234, 1;
         --success-foreground: 0, 180, 42, 1;
@@ -83,21 +83,11 @@
         --ring: 0 0% 83.1%;
     }
 
-    body {
-        @apply bg-background text-foreground;
-        font-size: 14px;
-    }
-    body svg {
-        display: inline;
-    }
-    button:focus-visible {
-        outline: none;
-    }
-    table {
-        & thead {
-            & tr {
-                border-bottom-width: 2px !important;
-            }
-        }
+    *,
+    ::after,
+    ::before,
+    ::backdrop,
+    ::file-selector-button {
+        border-color: hsl(var(--border));
     }
 }
