feat: dark 主题调试

--- a/packages/design/lib/components/uix/data-table/style.css
+++ b/packages/design/lib/components/uix/data-table/style.css
@@ -2,6 +2,10 @@
     --sticky-row-hover-color: rgba(250, 250, 250, 1);
     --sticky-row-selected-color: rgba(245, 245, 245, 1);
 }
+.dark .data-table {
+    --sticky-row-hover-color: #1c1c1c;
+    --sticky-row-selected-color: rgba(0, 0, 0, 0.2);
+}
 .data-table tr {
     @apply transition-none;
 }
@@ -11,7 +15,7 @@
 }
 .data-table tr th.table-sticky-row .inner,
 .data-table tr td.table-sticky-row .inner{
-    @apply bg-white;
+    @apply bg-background;
 }
 .data-table tr:hover th.table-sticky-row .inner,
 .data-table tr:hover td.table-sticky-row .inner{
