--- a/packages/design/lib/style/globals.css
+++ b/packages/design/lib/style/globals.css
@@ -45,7 +45,7 @@
     }
 
     .dark {
-        --background: 0 0% 3.9%;
+        --background: 0 0% 7%;
         --foreground: 0 0% 98%;
 
         --card: 0 0% 3.9%;
@@ -89,5 +89,9 @@
     ::backdrop,
     ::file-selector-button {
         border-color: hsl(var(--border));
+    }
+
+    html{
+        @apply bg-background text-foreground;
     }
 }
