--- a/packages/design/lib/style/globals.css
+++ b/packages/design/lib/style/globals.css
@@ -42,6 +42,8 @@
         --ring: 0 0% 3.9%;
 
         --radius: 0.5rem;
+
+        --action-hover: rgba(38, 50, 56, 0.05);
     }
 
     .dark {
@@ -81,6 +83,8 @@
         --border: 0 0% 14.9%;
         --input: 0 0% 14.9%;
         --ring: 0 0% 83.1%;
+
+        --action-hover: hsl(var(--secondary));
     }
 
     *,
@@ -93,5 +97,23 @@
 
     html{
         @apply bg-background text-foreground;
+    }
+}
+
+@layer components {
+    .action-effect {
+        @apply hover:bg-[var(--action-hover)] hover:text-primary;
+        @apply focus:bg-[rgba(31,30,36,0.08)] focus:border-[#bfbfc3] focus:shadow-[0_0_0_1px_#fff,0_0_0_3px_rgba(var(--primary))];
+        @apply dark:focus:border-black/10 dark:focus:shadow-[0_0_0_1px_hsl(var(--secondary)),0_0_0_3px_rgba(var(--primary))];
+    }
+    .action-effect-active {
+        @apply active:bg-[rgba(31,30,36,0.08)] active:border-[#bfbfc3] active:shadow-[0_0_0_1px_#fff,0_0_0_3px_rgba(var(--primary))];
+        @apply dark:active:border-black/10 dark:active:shadow-[0_0_0_1px_hsl(var(--secondary)),0_0_0_3px_rgba(var(--primary))];
+    }
+    .action-active {
+        @apply text-primary bg-[rgba(31,30,36,0.08)] dark:bg-secondary font-bold;
+    }
+    .action-effect-disabled {
+        @apply opacity-50 cursor-not-allowed hover:bg-transparent focus:bg-transparent active:bg-transparent focus:shadow-none active:shadow-none focus:border-transparent active:border-transparent;
     }
 }
