--- a/packages/design/lib/style/globals.css
+++ b/packages/design/lib/style/globals.css
@@ -34,8 +34,8 @@
         --accent: 0 0% 96.1%;
         --accent-foreground: 0 0% 9%;
 
-        --destructive: 0 84.2% 60.2%;
-        --destructive-foreground: 0 0% 98%;
+        --destructive: 245, 63, 63;
+        --destructive-foreground: 250, 250, 250;
 
         --border: 0 0% 89.8%;
         --input: 0 0% 89.8%;
@@ -77,8 +77,8 @@
         --accent: 0 0% 14.9%;
         --accent-foreground: 0 0% 98%;
 
-        --destructive: 0 62.8% 30.6%;
-        --destructive-foreground: 0 0% 98%;
+        --destructive: 245, 63, 63;
+        --destructive-foreground: 250, 250, 250;
 
         --border: 0 0% 14.9%;
         --input: 0 0% 14.9%;
