feat: svg img inline-block

--- a/packages/design/lib/style/globals.css
+++ b/packages/design/lib/style/globals.css
@@ -98,6 +98,9 @@
     html{
         @apply bg-background text-foreground;
     }
+    svg, img {
+        display: inline-block;
+    }
 }
 
 @layer components {
