--- a/packages/design/lib/components/uix/data-table/style.css
+++ b/packages/design/lib/components/uix/data-table/style.css
@@ -1,32 +1,38 @@
 .data-table {
   --sticky-row-hover-color: rgba(250, 250, 250, 1);
-  --sticky-row-selected-color: rgba(245, 245, 245, 1);
 }
 
 .dark .data-table {
   --sticky-row-hover-color: #1c1c1c;
-  --sticky-row-selected-color: rgba(0, 0, 0, 0.2);
+}
+.dark .data-table.in-card {
+  --sticky-row-hover-color: #181818;
 }
 
 .data-table tr {
   @apply transition-none;
 }
 
-.data-table tr th.table-sticky-row,
-.data-table tr td.table-sticky-row {
+.data-table tr th.table-sticky-col,
+.data-table tr td.table-sticky-col {
   @apply p-0;
 }
 
-.data-table tr th.table-sticky-row .inner,
-.data-table tr td.table-sticky-row .inner {
+.data-table tr th.table-sticky-col .inner,
+.data-table tr td.table-sticky-col .inner {
   @apply bg-background;
 }
 
-.data-table tr:hover th.table-sticky-row .inner,
-.data-table tr:hover td.table-sticky-row .inner {
+.data-table.in-card tr th.table-sticky-col .inner,
+.data-table.in-card tr td.table-sticky-col .inner {
+  @apply bg-card;
+}
+
+.data-table tr:hover th.table-sticky-col .inner,
+.data-table tr:hover td.table-sticky-col .inner {
   @apply bg-[var(--sticky-row-hover-color)];
 }
 
-.data-table tr[data-state=selected] td.table-sticky-row .inner {
+.data-table tr[data-state=selected] td.table-sticky-col .inner {
   @apply bg-[hsl(var(--muted))];
 }
