--- a/packages/design/src/assets/style/theme.css
+++ b/packages/design/src/assets/style/theme.css
@@ -72,10 +72,10 @@
     --accent-foreground: hsl(0 0% 9%);
     --destructive: rgba(245, 63, 63, 1);
     --destructive-foreground: rgba(250, 250, 250, 1);
-    --border: hsl(0 0% 89.8%);
-    --input: hsl(0 0% 89.8%);
-    --ring: hsl(0 0% 3.9%);
     --radius: 0.5rem;
+    --border: oklch(0.922 0 0);
+    --input: oklch(0.922 0 0);
+    --ring: oklch(0.708 0 0);
     --chart-1: oklch(0.646 0.222 41.116);
     --chart-2: oklch(0.6 0.118 184.704);
     --chart-3: oklch(0.398 0.07 227.392);
@@ -115,9 +115,9 @@
     --accent-foreground: hsl(0 0% 98%);
     --destructive: rgba(245, 63, 63, 1);
     --destructive-foreground: rgba(250, 250, 250, 1);
-    --border: hsl(0 0% 14.9%);
-    --input: hsl(0 0% 14.9%);
-    --ring: hsl(0 0% 83.1%);
+    --border: oklch(1 0 0 / 10%);
+    --input: oklch(1 0 0 / 15%);
+    --ring: oklch(0.556 0 0);
     --chart-1: oklch(0.488 0.243 264.376);
     --chart-2: oklch(0.696 0.17 162.48);
     --chart-3: oklch(0.769 0.188 70.08);
