--- a/packages/editor/lib/editor/container.css
+++ b/packages/editor/lib/editor/container.css
@@ -12,7 +12,8 @@
 .editor-container .editor .tiptap {
   @apply outline-none pt-[1px] -mt-[1px] caret-foreground;
   p.is-empty::before {
-    color: hsl(var(--muted-foreground) / 0.5);
+    color: var(--muted-foreground);
+    opacity: 0.5;
     content: attr(data-placeholder);
     float: left;
     height: 0;
@@ -20,12 +21,14 @@
   }
 
   blockquote.is-empty:before {
-    color: hsl(var(--muted-foreground) / 0.5);
+    color: var(--muted-foreground);
+    opacity: 0.5;
     content: attr(data-placeholder);
   }
 
   blockquote + figcaption.is-empty:before {
-    color: hsl(var(--muted-foreground) / 0.5);
+    color: var(--muted-foreground);
+    opacity: 0.5;
     content: attr(data-placeholder);
   }
 
