--- a/packages/design/src/assets/style/theme.css
+++ b/packages/design/src/assets/style/theme.css
@@ -153,13 +153,13 @@
 
 @utility action-effect {
   @apply hover:bg-[var(--action-hover)] hover:text-primary;
-  @apply focus:bg-[rgba(31,30,36,0.08)] focus:border-[#bfbfc3] focus:shadow-[0_0_0_1px_#fff,0_0_0_3px_rgba(var(--primary))];
-  @apply dark:focus:border-black/10 dark:focus:shadow-[0_0_0_1px_hsl(var(--secondary)),0_0_0_3px_rgba(var(--primary))];
+  @apply focus:bg-[var(--action-hover)] focus:border-[var(--border)] focus:shadow-[0_0_0_1px_var(--card),0_0_0_3px_var(--primary)];
+  @apply dark:focus:border-[var(--sidebar-border)] dark:focus:shadow-[0_0_0_1px_var(--secondary),0_0_0_3px_var(--primary)];
 }
 
 @utility action-effect-active {
-  @apply active:bg-[rgba(31,30,36,0.08)] active:border-[#bfbfc3] active:shadow-[0_0_0_1px_#fff,0_0_0_3px_rgba(var(--primary))];
-  @apply dark:active:border-black/10 dark:active:shadow-[0_0_0_1px_hsl(var(--secondary)),0_0_0_3px_rgba(var(--primary))];
+  @apply active:bg-[var(--action-hover)] active:border-[var(--border)] active:shadow-[0_0_0_1px_var(--card),0_0_0_3px_var(--primary)];
+  @apply dark:active:border-[var(--sidebar-border)] dark:active:shadow-[0_0_0_1px_var(--secondary),0_0_0_3px_var(--primary)];
 }
 
 @utility action-active {
