feat: image upload

--- a/packages/editor/lib/style/tailwind.css
+++ b/packages/editor/lib/style/tailwind.css
@@ -1,4 +1,5 @@
 @import "@easykit/design/theme.css";
+@import "@easykit/design/style.css";
 
 @source "../../../../";
 @source not "../../../../node_modules";
